--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.1"
+    "react-router": "^2.0.1",
+    "rethinkdb": "^2.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
