--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "production": "webpack -p",
-    "start": "node ./server/bot.js"
+    "start": "node ./server/bot.js",
+    "dev": "webpack-dev-server"
   },
   "author": "",
   "license": "MIT",
