--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "production": "webpack -p",
     "start": "node ./server/bot.js",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --port 3000"
   },
   "author": "",
   "license": "MIT",
