--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
-    "rethinkdb": "^2.2.2"
+    "rethinkdb": "^2.2.2",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
