--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "rethinkdb": "^2.2.2",
+    "sentiment": "^1.0.6",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5"
   },
