--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "production": "webpack -p",
     "start": "node ./server/bot.js",
-    "dev": "webpack-dev-server --port 3000"
+    "dev": "webpack-dev-server --port 3000",
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "author": "",
   "license": "MIT",
@@ -14,9 +15,11 @@
     "botkit": "0.0.8",
     "express": "^4.13.4",
     "lodash": "^4.6.1",
+    "immutable": "^3.7.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
+    "redux": "^3.3.1",
     "rethinkdb": "^2.2.2",
     "sentiment": "^1.0.6",
     "socket.io": "^1.4.5",
@@ -27,7 +30,10 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.5.3",
     "html-webpack-plugin": "^2.9.0",
+    "mocha": "^2.4.5",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
