--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.4",
     "lodash": "^4.6.1",
     "immutable": "^3.7.6",
+    "natural": "^0.4.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
