--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.3",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
     "html-webpack-plugin": "^2.9.0",
     "mocha": "^2.4.5",
     "webpack": "^1.12.14",
