--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.1",
+    "estraverse-fb": "^1.3.1",
     "html-webpack-plugin": "^2.9.0",
     "mocha": "^2.4.5",
     "webpack": "^1.12.14",
