--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "botkit": "0.0.8",
     "express": "^4.13.4",
-    "lodash": "^4.6.1",
+    "glob": "^7.0.3",
     "immutable": "^3.7.6",
+    "lodash": "^4.6.1",
     "natural": "^0.4.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
