--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
       "semi": [2, "always"],
       "strict": 0,
       "no-console": 0,
-      "prefer-const": 0
+      "prefer-const": 0,
+      "comma-dangle": 0
   },
   "env": {
       "es6": true,
