--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1",
     "rethinkdb": "^2.2.2",
     "sentiment": "^1.0.6",
     "socket.io": "^1.4.5",
