--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,9 @@
       "strict": 0,
       "no-console": 0,
       "prefer-const": 0,
-      "comma-dangle": 0
+      "comma-dangle": 0,
+      "react/prefer-es6-class": [1, "never"],
+      "react/react-in-jsx-scope": 1
   },
   "env": {
       "es6": true,
