--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "production": "webpack -p",
     "start": "node ./server/bot.js",
-    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test": "jest",
     "dev": "webpack-dev-server --port 1337"
   },
   "author": "",
   "license": "MIT",
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
+    ]
+  },
   "dependencies": {
     "botkit": "0.0.8",
     "express": "^4.13.4",
@@ -35,6 +42,7 @@
   "devDependencies": {
     "babel-core": "^6.7.0",
     "babel-eslint": "^5.0.0",
+    "babel-jest": "^9.0.3",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
@@ -46,7 +54,9 @@
     "eslint-plugin-react": "^4.2.1",
     "estraverse-fb": "^1.3.1",
     "html-webpack-plugin": "^2.9.0",
+    "jest-cli": "^0.9.2",
     "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.6.1",
     "webpack": "^1.12.14",
