--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "botkit": "0.0.8",
+    "chart.js": "^1.0.2",
     "express": "^4.13.4",
     "glob": "^7.0.3",
     "immutable": "^3.7.6",
     "lodash": "^4.6.1",
     "natural": "^0.4.0",
     "react": "^0.14.7",
+    "react-chartjs": "^0.7.3",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
