--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "botkit": "0.0.8",
     "chart.js": "^1.0.2",
+    "bulma": "0.0.16",
     "express": "^4.13.4",
     "glob": "^7.0.3",
     "immutable": "^3.7.6",
