--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.3",
+    "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.1",
@@ -62,6 +63,7 @@
     "react-addons-test-utils": "^0.14.7",
     "redbox-react": "^1.2.2",
     "redux-logger": "^2.6.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
