--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "production": "webpack -p",
-    "start": "node ./server/bot.js",
+    "start": "node -r dotenv/config server/index.js",
     "test": "jest",
     "dev": "webpack-dev-server --port 1337"
   },
@@ -22,6 +22,7 @@
     "botkit": "0.0.8",
     "bulma": "0.0.16",
     "chart.js": "^1.0.2",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "glob": "^7.0.3",
     "immutable": "^3.7.6",
