--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -p",
+    "build": "NODE_ENV=production webpack -p",
     "prod": "NODE_ENV=production node -r dotenv/config server/index.js",
     "start": "npm run build && npm run prod",
     "test": "jest",
