--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.5.0",
     "botkit": "0.0.8",
     "bulma": "0.0.16",
-    "chart.js": "^1.0.2",
+    "chart.js": "https://github.com/nnnick/Chart.js/tree/2.0.0-beta2",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "glob": "^7.0.3",
@@ -37,7 +37,7 @@
     "moment": "^2.12.0",
     "natural": "^0.4.0",
     "react": "^0.14.7",
-    "react-chartjs": "^0.7.3",
+    "react-chartjs": "git+https://github.com/danmolitor/react-chartjs.git",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
