--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.5.0",
     "botkit": "0.0.8",
     "bulma": "0.0.16",
-    "chart.js": "https://github.com/nnnick/Chart.js/tree/2.0.0-beta2",
+    "chart.js": "git://github.com/nnnick/Chart.js.git#2.0.0-beta2",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "glob": "^7.0.3",
