--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "rethinkdb": "^2.2.2",
+    "rethinkdb-websocket-client": "^0.4.6",
+    "rethinkdb-websocket-server": "^0.4.1",
     "sentiment": "^1.0.6",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
