--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "moment": "^2.12.0",
     "natural": "^0.4.0",
     "react": "^0.14.7",
-    "react-chartjs": "git+https://github.com/danmolitor/react-chartjs.git",
+    "react-chartjs": "git+https://github.com/danmolitor/react-chartjs.git#chartjs2dev",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
