--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
       "prefer-const": 0,
       "comma-dangle": 0,
       "react/prefer-es6-class": [1, "never"],
-      "react/react-in-jsx-scope": 1
+      "react/react-in-jsx-scope": 1,
+      "no-use-before-define": "nofunc"
   },
   "env": {
       "es6": true,
