--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod": "NODE_ENV=production node -r dotenv/config server/index.js",
     "start": "npm run build && npm run prod",
     "test": "jest",
-    "dev": "node -r dotenv/config server/index.babel.js"
+    "dev": "node -r dotenv/config server/index.js"
   },
   "author": "",
   "license": "MIT",
