--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js",
-    "prod": "NODE_ENV=production node -r dotenv/config server/index.js",
+    "build:server": "rimraf build && babel server -d build",
+    "build:client": "NODE_ENV=production webpack --config ./webpack.production.config.js",
+    "build": "npm run build:server && npm run build:client",
+    "prod": "NODE_ENV=production node -r dotenv/config build/index.js",
     "start": "npm run build && npm run prod",
     "test": "jest",
     "dev": "node -r dotenv/config server/index.babel.js"
@@ -20,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
@@ -49,6 +52,7 @@
     "rethinkdb": "^2.2.2",
     "rethinkdb-websocket-client": "^0.4.6",
     "rethinkdb-websocket-server": "^0.4.1",
+    "rimraf": "^2.5.2",
     "sentiment": "^1.0.6",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
