--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:server": "rimraf build && babel server -d build",
-    "build:client": "NODE_ENV=production webpack --config ./webpack.production.config.js",
+    "build:client": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js",
     "build": "npm run build:server && npm run build:client",
     "prod": "NODE_ENV=production node -r dotenv/config build/index.js",
     "start": "npm run build && npm run prod",
