--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "natural": "^0.4.0",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "react": "^0.14.7",
     "react-chartjs": "git+https://github.com/danmolitor/react-chartjs.git#chartjs2dev",
     "react-dom": "^0.14.7",
