--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "jest": {
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/redux",
       "<rootDir>/node_modules/react-dom",
       "<rootDir>/node_modules/react-addons-test-utils"
     ]
