--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.9.0",
     "immutable": "^3.7.6",
+    "jwt-simple": "^0.5.0",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "natural": "^0.4.0",
