--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build:server && npm run build:client",
     "prod": "NODE_ENV=production node -r dotenv/config build/index.js",
     "start": "npm run build && npm run prod",
-    "test": "jest",
+    "test": "jest -o",
     "dev": "node -r dotenv/config server/index.babel.js"
   },
   "author": "",
@@ -43,6 +43,7 @@
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "natural": "^0.4.0",
+    "nock": "7.7.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "react": "^0.14.7",
@@ -52,6 +53,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
+    "redux-mock-store": "1.0.2",
     "redux-thunk": "^2.0.1",
     "rethinkdb": "^2.2.2",
     "rethinkdb-websocket-client": "^0.4.6",
