--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-logger": "^2.6.1",
     "redux-mock-store": "1.0.2",
     "redux-thunk": "^2.0.1",
+    "request": "2.69.0",
     "rethinkdb": "^2.2.2",
     "rethinkdb-websocket-client": "^0.4.6",
     "rethinkdb-websocket-server": "^0.4.1",
