Enable Google search with Dreambot

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "glob": "^7.0.3",
+    "google": "2.0.0",
     "html-webpack-plugin": "^2.9.0",
     "immutable": "^3.7.6",
     "jwt-simple": "^0.5.0",
