--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-mock-store": "1.0.2",
